--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #152665;
-  --ifm-color-primary-dark: #0c163d;
+  --ifm-color-primary: #3b6cf4;
+  --ifm-color-primary-dark: #152665;
   --ifm-color-primary-darker: #0c163d;
   --ifm-color-primary-darkest: #0c163d;
-  --ifm-color-primary-light: #152665;
-  --ifm-color-primary-lighter: #152665;
-  --ifm-color-primary-lightest: #152665;
+  --ifm-color-primary-light: #3b6cf4;
+  --ifm-color-primary-lighter: #3b6cf4;
+  --ifm-color-primary-lightest: #3b6cf4;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -21,8 +21,8 @@
 [data-theme='dark'] {
   --ifm-color-primary: #3b6cf4;
   --ifm-color-primary-dark: #152665;
-  --ifm-color-primary-darker: #152665;
-  --ifm-color-primary-darkest: #152665;
+  --ifm-color-primary-darker: #0c163d;
+  --ifm-color-primary-darkest: #0c163d;
   --ifm-color-primary-light: #3b6cf4;
   --ifm-color-primary-lighter: #3b6cf4;
   --ifm-color-primary-lightest: #3b6cf4;
