--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #3b6cf4;
+  --ifm-color-primary: #152665;
   --ifm-color-primary-dark: #152665;
   --ifm-color-primary-darker: #0c163d;
   --ifm-color-primary-darkest: #0c163d;
@@ -15,6 +15,10 @@
   --ifm-color-primary-lightest: #3b6cf4;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-footer-background-color: #0C163D;
+  --ifm-footer-title-color: #ffffff;
+  --ifm-footer-link-color: #ffffff;
+  --ifm-footer-link-hover-color: rgba(255, 255, 255, 0.5);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +31,5 @@
   --ifm-color-primary-lighter: #3b6cf4;
   --ifm-color-primary-lightest: #3b6cf4;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-footer-background-color: #3b6cf4;
 }
